--- a/resume.tex
+++ b/resume.tex
@@ -134,7 +134,7 @@
     \resumeSubheading    {\href{https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=drive_link}{Theatron Square}}{Delhi, India}
       {Android Developer}{Feb 2020 - Sep 2020}
       \resumeItemListStart
-        \resumeItem{Worked on a \textbf{video-sharing Android application} similar to \textbf{YouTube}, empowering artists to showcase their talents, built using \textbf{Kotlin} and \textbf{Firebase} and published it on \textbf{Google Play Store}}
+        \resumeItem{Worked on a \textbf{video-sharing Android application} similar to \textbf{YouTube}, empowering artists to showcase their talents, built using \textbf{Kotlin} and \textbf{Firebase} and published it on the \textbf{Google Play Store}}
         \resumeItem{Worked on the \textbf{video compression} functionality to reduce size without compromising quality}
       \resumeItemListEnd
   \end{itemize}
