--- a/resume.tex
+++ b/resume.tex
@@ -120,22 +120,22 @@
       {Associate Software Development Engineer 2}{Nov 2023 - Present}
       {Associate Software Development Engineer 1}{Jun 2022 - Oct 2023}
       \resumeItemListStart
-        \resumeItem{Engaged in overseeing \textbf{the complete Software Development Life Cycle (SDLC)} for \textbf{Java-based full-stack} projects across diverse domains, including \textbf{finance, travel, industrial, and telecommunication sectors}}
-        \resumeItem{Developing the \textbf{backend functionality utilizing Spring Boot (Webflux/MVC)}, incorporating databases such as \textbf{MySQL and MongoDB} along with \textbf{JPA}, conducting unit tests utilizing \textbf{JUnit 5 and Mockito}, leveraging \textbf{Kafka} as an event broker, integrating \textbf{React.js} for the frontend, and documenting APIs with \textbf{Swagger}}
-        \resumeItem{Playing a pivotal role in \textbf{architectural decisions}, conducting \textbf{code reviews}, and managing \textbf{cloud infrastructure across multiple cloud platforms like AWS, GCP, or Azure}. Implementing \textbf{DevOps automation} tasks, including establishing \textbf{Jenkins pipelines} integrated with \textbf{Sonarqube} for maintaining code quality standards and ensuring test coverage reaches \textbf{100\%}. Additionally, handling \textbf{Docker} image creation and facilitating container deployment.}
+        \resumeItem{Engaged in overseeing the complete Software Development Life Cycle (SDLC) for Java-based full-stack projects across diverse domains, including finance, travel, industrial, and telecommunication sectors}
+        \resumeItem{Developing the backend functionality utilizing Spring Boot (Webflux/MVC), incorporating databases such as MySQL and MongoDB along with JPA, conducting unit tests utilizing JUnit 5 and Mockito, leveraging Kafka as an event broker, integrating React.js for the frontend, and documenting APIs with Swagger}
+        \resumeItem{Playing a pivotal role in architectural decisions, conducting code reviews, and managing cloud infrastructure across multiple cloud platforms like AWS, GCP, or Azure. Implementing DevOps automation tasks, including establishing Jenkins pipelines integrated with Sonarqube to maintain code quality standards and ensure test coverage reaches 100\%. Additionally, handling Docker image creation and facilitate container deployment}
       \resumeItemListEnd
     \resumeSubheading
       {\href{https://drive.google.com/file/d/17-DFgOcSbG0xDdktRRiiSUSSK33WUFMe/view?usp=drive_link}{TalentDecrypt}}{Delhi, India}
       {Data Science Intern}{Jan 2021 - Oct 2021}
       \resumeItemListStart
-        \resumeItem{Developed a \textbf{candidate suspicious activity detection system} by integrating sophisticated components such as \textbf{Face Detection, Recognition, and Object Detection} to enhance examination procedures and ensure scrutiny}
-        \resumeItem{Integrated an \textbf{Audio Wave Visualizer} and \textbf{Brightness Checker} functionality to detect irregularities}
+        \resumeItem{Developed a candidate suspicious activity detection system by integrating sophisticated components such as Face Detection, Recognition, and Object Detection to enhance examination procedures and ensure scrutiny}
+        \resumeItem{Integrated an Audio Wave Visualizer and Brightness Checker functionality to detect irregularities}
       \resumeItemListEnd
     \resumeSubheading    {\href{https://drive.google.com/file/d/1Ahg2Gzz8oLBs495N4PT9a1fszNBcJUB9/view?usp=drive_link}{Theatron Square}}{Delhi, India}
       {Android Developer}{Feb 2020 - Sep 2020}
       \resumeItemListStart
-        \resumeItem{Worked on a \textbf{video-sharing Android application} similar to \textbf{YouTube}, empowering artists to showcase their talents, built using \textbf{Kotlin} and \textbf{Firebase} and published it on the \textbf{Google Play Store}}
-        \resumeItem{Worked on the \textbf{video compression} functionality to reduce size without compromising quality}
+        \resumeItem{Worked on a video-sharing Android application similar to YouTube, empowering artists to showcase their talents, built using Kotlin and Firebase and published it on the Google Play Store}
+        \resumeItem{Worked on the video compression functionality to reduce size without compromising quality}
       \resumeItemListEnd
   \end{itemize}
 
@@ -157,20 +157,20 @@
       \resumeProjectHeading
           {\href{https://github.com/JayantGoel001/A-Social-Media}{\textbf{A Social Media}} $|$ \emph{MEAN stack, Vercel, Github Pages, MongoDB Atlas}}{Aug 2020 - Sep 2020}
           \resumeItemListStart
-            \resumeItem{A Social Media is an innovative application crafted through \textbf{MEAN Stack Development}. Within this platform, users can establish connections while sharing their thoughts through posts and messages}
-            \resumeItem{The API is deployed on \textbf{Vercel} and frontend on \textbf{GitHub Pages}, ensuring optimal performance}
+            \resumeItem{A Social Media is an innovative application crafted through MEAN Stack Development. Within this platform, users can establish connections while sharing their thoughts through posts and messages}
+            \resumeItem{The API is deployed on Vercel and frontend on GitHub Pages, ensuring optimal performance}
           \resumeItemListEnd
       \resumeProjectHeading
           {\href{https://github.com/JayantGoel001/AI-Image-Caption-Bot}{\textbf{AI Image Caption Bot}} $|$ \emph{Python, NumPy, Pandas, Keras, nltk, Tensorflow, Flickr8k}}{Jun 2020 - Jul 2020}
           \resumeItemListStart
-            \resumeItem{Developed a project leveraging \textbf{deep learning and computer vision} to analyze image context and generate captions}
-            \resumeItem{Utilized \textbf{ResNet50, a CNN model} for image feature extraction from the \textbf{ImageNet dataset}}
-            \resumeItem{Integrated features into \textbf{LSTM model} for generating \textbf{descriptive image captions}, enhancing automated annotation}
+            \resumeItem{Developed a project leveraging deep learning and computer vision to analyze image context and generate captions}
+            \resumeItem{Utilized ResNet50, a CNN model for image feature extraction from the ImageNet dataset}
+            \resumeItem{Integrated features into LSTM model for generating descriptive image captions, enhancing automated annotation}
           \resumeItemListEnd
       \resumeProjectHeading
           {\href{https://github.com/JayantGoel001/AI-Music-Generation}{\textbf{AI Music Generation}} $|$ \emph{Python, NumPy, Pandas, Keras, Music21, Tensorflow}}{Jun 2020 - Jul 2020}
           \resumeItemListStart
-            \resumeItem{Implemented a system that generates \textbf{melodious pieces of piano music} using various parameters like pitch interval, notes, chords, stream, etc}
+            \resumeItem{Implemented a system that generates melodious pieces of piano music using various parameters like pitch interval, notes, chords, stream, etc}
           \resumeItemListEnd
     \end{itemize}
 
@@ -188,9 +188,10 @@
 %------ACHIEVEMENTS AND RECOGNITIONS--------
 \section{Achievements and Certifications}
   \resumeItemListStart      \resumeItem{\href{https://drive.google.com/file/d/1U9yLcTbFNVLfGm9tHbY7JiOYqgzFtAvm/view?usp=drive_link&usp=embed_facebook}{\textbf{Rookie of the Batch}} award at \textbf{Publicis Sapient} in Oct 2022 for exhibiting all company core values}
-  \resumeItem{\href{https://www.facebook.com/codingcompetitions/hacker-cup/2021/certificate/530301721540794}{\textbf{Facebook Hacker Cup 2021}} Qualification Round Rank \textbf{94}}
-  \resumeItem{Achieved \textbf{6 \faStar} on \href{https://www.hackerrank.com/profile/JayantGoel001}{\textbf{HackerRank}} with over \textbf{3300} points, demonstrating \textbf{exceptional coding skills}}\resumeItem{\textbf{Major Certifications:} \href{https://drive.google.com/file/d/15qgH3MU0gf9ww9uZuMcu4e2ezFcTaZK1/view?usp=drive_link}{\underline{\textbf{AWS} Certified Cloud Practitioner}}, \href{https://drive.google.com/file/d/1gxAfbcVD6_U8mtxzcrPHf1gZmZ5Z20xh/view?usp=drive_link}{\underline{\textbf{Google Cloud} Cloud Digital Leader}}, \href{https://drive.google.com/file/d/1_ghen3KbDJKEgsdudfGRUg77y8ytYC3L/view?usp=drive_link}{\underline{Microsoft Certified: \textbf{Azure} Fundamentals}}, and
-      \href{https://drive.google.com/file/d/12THg9_3-KtjSRe7pLfw27_pqwkDtSQMx/view?usp=drive_link}{\underline{The Complete 2020 \textbf{Web Developer} Master Course - \textbf{Udemy}}}
+  \resumeItem{\href{https://www.facebook.com/codingcompetitions/hacker-cup/2021/certificate/530301721540794}{\textbf{Facebook Hacker Cup 2021}} Qualification Round Rank 94}
+  \resumeItem{Achieved \textbf{6 \faStar} on \href{https://www.hackerrank.com/profile/JayantGoel001}{\textbf{HackerRank}} with over 3300 points, demonstrating exceptional coding skills}
+  \resumeItem{\textbf{Major Certifications:} \href{https://drive.google.com/file/d/15qgH3MU0gf9ww9uZuMcu4e2ezFcTaZK1/view?usp=drive_link}{\underline{AWS Certified Cloud Practitioner}}, \href{https://drive.google.com/file/d/1gxAfbcVD6_U8mtxzcrPHf1gZmZ5Z20xh/view?usp=drive_link}{\underline{Google Cloud Certified Cloud Digital Leader}}, \href{https://drive.google.com/file/d/1_ghen3KbDJKEgsdudfGRUg77y8ytYC3L/view?usp=drive_link}{\underline{Microsoft Certified: Azure Fundamentals}}, and
+      \href{https://drive.google.com/file/d/12THg9_3-KtjSRe7pLfw27_pqwkDtSQMx/view?usp=drive_link}{\underline{The Complete 2020 Web Developer Master Course - Udemy}}
       }
   \resumeItemListEnd
 \end{document}
